# EncodingInformation

./: .gitignore  Installation_guide.md  LICENSE  README.md  gaussian_process.py  gaussian_process_utils.py  henrystopitlog.txt  image_distribution_models.py  image_utils.py  information_estimation.py  pixel_cnn.py  plot_utils.py  pyproject.toml  readthedocs.yaml
1d_simulations/: 1_bandlimited_signal_space.ipynb  2_object_dependent_encoder_range.ipynb  3_optimizing_with_information.ipynb  4_conceptual_signal_space_figure.ipynb  5_mi_vs_bandlimited_signal_space.ipynb  6_rayleigh_2_point_1_point.ipynb  DINO_concept_figure.ipynb  bandlimited_signal_space.ipynb  conceptual_signal_space_figure.ipynb  convolutional_encoder.ipynb  encoding_object_ensembles.ipynb  info_vs_sampling_density.ipynb  information_optimal_encoders.ipynb  mi_vs_bandlimited_signal_space.ipynb  mi_vs_sampling_density.ipynb  mi_vs_sampling_density_SNRs.ipynb  mi_vs_sampling_density_objects.ipynb  mi_vs_signal_bandwidth.ipynb  mi_vs_snr.ipynb  object_dependent_encoder_range.ipynb  optimizing_with_information.ipynb  optimizing_with_information_and_erasure_masks.ipynb  plot_utils_1D.py  random_signal_generation.ipynb  resolution1d_utils.py  sample_generation.py  signal_utils_1D.py  tmp.ipynb
animations/: animation_maker.ipynb  annimations_utils.py
color_filter_array/: data  ideal_debug.ipynb  ideal_optimization.py  mi_calculation.py  recon.py  recon_validation.py  results_viewer.ipynb  sandbox.ipynb  utils.py
dino/: DINO_2plane_info_estimates copy.ipynb  DINO_2plane_info_estimates.ipynb  DINO_2plane_info_estimates_with_background.ipynb  DINO_Fourier_transform_test.ipynb  DINO_debugging_fuoco.ipynb  DINO_debugging_fuoco_2.ipynb  DINO_debugging_fuoco_gaussian_noise.ipynb  DINO_debugging_neareset_neighbors_test.ipynb  DINO_debugging_plot_maker.ipynb  DINO_debugging_plot_maker_fuoco.ipynb  (+13 more)
(+3741 files in other folders)
