[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "encoding_information"
authors = [{name = "Henry Pinkard"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: BSD License"
]
dependencies = [
    "numpy"
]
dynamic = ["version"]
description = "Estimating encoded information"
readme = "README.md"

[project.urls]
Home = "https://github.com/Waller-Lab/EncodingInformation"
